--- a/cookingBook/registrationWin.xaml
+++ b/cookingBook/registrationWin.xaml
@@ -28,9 +28,13 @@
 
             <RadioButton Name="female" FontSize="20" Content="Female" Template="{StaticResource radioButtonTemplate}"/>
 
-            <PasswordBox Name="password" FontSize="20" ToolTip="Password" Template="{StaticResource passwordTemplate}" Margin="0, 20, 0, 0"/>
+            <Label Content="Password" Style="{StaticResource simpleLabel}" FontSize="15" Margin="0, 10, 0, 0"/>
 
-            <PasswordBox Name="password2" FontSize="20" ToolTip="Confirm" Template="{StaticResource passwordTemplate}" Margin="0, 20"/>
+            <PasswordBox Name="password" Template="{DynamicResource passwordTemplate}" FontSize="20"  Margin="0, 0, 0, 20"/>
+
+            <Label Content="Confirm" Style="{StaticResource simpleLabel}" FontSize="15"/>
+
+            <PasswordBox Name="password2" Template="{DynamicResource passwordTemplate}" FontSize="20"  Margin="0, 0, 0, 20"/>
 
             <Label Content="Register" Style="{StaticResource simpleLabel}" Name="register" MouseDoubleClick="Register_MouseDoubleClick" FontSize="17"/>
 
